[tool.poetry]
name = "fast api"
version = "0.1.0"
description = "\"new test of fast api\""
authors = ["Valentine Enedah <valentine.enedah@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
isort = "^5.10.1"
mypy = "^0.941"
flake8 = "^4.0.1"
pytest = "^7.1.1"
vaderSentiment = "^3.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
